# CrystaLattE

./: .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
Cifs/: 14-cyclohexanedione.cif  acetic_acid.cif  ammonia.cif  benzene.cif  ethyl_carbamate.cif  formamide.cif  ice-Ih.cif  naphthalene.cif  pyrazine.cif  succinic_acid.cif  trioxane.cif  urea.cif
Notes/: Requirements.txt
Outsourcing/ArbAlign/: ArbAlign.py  genConn.csh
Outsourcing/PyCifRW-4.2/: TestPyCifRW.py
Outsourcing/Read_CIF/: American Mineralogist Crystal Structure Database.txt  Webpage.txt  how_to_use.txt  quartz-alpha.cif  read_cif-CHB-0.py  read_cif-CHB-1.py  read_cif-CHB-3.py  read_cif-CHB-4.py
Sandbox/: 14-cyclohexanedione.cle  Benzene-138K.xyz  CrystaLattE.py  Psithons_Analyzer.py  Read_CIF.py  Test-function-call.py  bzfrag.p4  bztest.p4  carbon_dioxide.cle  frgincntr.py  fscellorg.py  fxyz2mxyz.py  fxyzrm.py  ice-Ih.xyz  icefrag.p4  input.cle  input.in  mols2mons.py  mons2dims.py  p4frag2xyz.py
Sandbox/ArbAlign/: 1-001.xyz  1-002.xyz  ArbAlign-driver.py  ArbAlign.py  PrinCoords.py  README  RMSD-Kabsch.py  genTypes.csh
crystalatte/: __init__.py  _version.py  analyzer_psithon.py  crystalatte.py  csv3mersord.py  psithonyzer.py
devtools/: README.md
docs/: Makefile  README.md  conf.py  index.rst  make.bat
examples/: ammonia.csv  ammonia.xyz  custom_energy.py  custom_ff.py
loriab/: README.md  acetic_acid_mp2_noaug.cle  demo.cle
(+222 files in other folders)
